--- a/css/white-mode.css
+++ b/css/white-mode.css
@@ -1,7 +1,8 @@
 /* ========= white theme ======== */
 .color__switch {
     position: absolute;
-    top: -100px;
+    top: 50%;
+    right: 0;
 }
 
 .color__switch li {
